<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/includeAdded"
            layout="@layout/action_bar_main" />

        <RelativeLayout
            android:id="@+id/relativeAddNewTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/includeAdded">

            <TextView
                android:id="@+id/txtAddNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/add_new"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAddNew"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/task"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeAddNewTask"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ellipsize="end"
                android:hint="@string/title"
                android:maxLines="1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtTitle"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:ellipsize="end"
                android:hint="@string/content"
                android:maxLines="3"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativePriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeContent"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/tvTitleTaskPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/priority"
                android:textColor="@color/purple"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitleTaskPriority"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:weightSum="3">

                <RelativeLayout
                    android:id="@+id/btnLow"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selected_priority">

                    <TextView
                        android:id="@+id/tvLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/low"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnMedium"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_unselected_priority">

                    <TextView
                        android:id="@+id/tvMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/medium"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnHigh"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_unselected_priority">

                    <TextView
                        android:id="@+id/tvHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/high"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btnAddNewTask"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_register">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add_now"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>