<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivCheck"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_round_check_24" />

        <TextView
            android:id="@+id/tvTitleNewTaskAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivCheck"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/new_task_added"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitleConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleNewTaskAdded"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"
            android:hint="@string/title"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvContentConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleConfirm"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:ellipsize="end"
            android:hint="@string/content"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/btnBackToHome"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/back_to_home"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnAddAnotherTask"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/btnBackToHome"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_another_task"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>