<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_inset">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDeletedConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/deleted_confirm"
            android:textColor="@color/purple"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDeletedConfirm"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/btnDeleted"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_selected_priority">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="11sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_selected_priority">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="11sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>