<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/topImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/purple"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintTop">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:id="@+id/relativeUserName"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/relativeIconUser"
                    android:ellipsize="end"
                    android:hint="@string/user_name"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/relativeIconUser"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/circle_shape_yellow_light">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_round_account_24" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewUserName"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/relativeIconEmail"
                    android:ellipsize="end"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/relativeIconEmail"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/circle_shape_blue_light">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_round_mail_24" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/btnLogout"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_below="@+id/cardViewEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>